lib: media_list_player: remove wrong assert

Fixes #21985

This function is now always called locked (before the thread is created from
new()).